--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <body>
         <header>
             <img src="./assets/images/IMG_8140.png" alt="icon">
-            <h3>Under construction</h3>
+            <h3>lenspeeks</h3>
         </header>
+        <div class="construction">
+            <h2>This website is under construction</h2>
+        </div>
     </body>
 </html>
