--- a/index.html
+++ b/index.html
@@ -3,17 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Home - lenspeeks</title>
+        <title>Hem - Alvin Nyström</title>
         <link rel="icon" type="image/x-icon" href="./assets/images/hogtalare.png">
         <link rel="stylesheet" href="assets/css/style.css">
     </head>
     <body>
-        <header>
-            <img src="./assets/images/IMG_8140.png" alt="icon">
-            <h3>lenspeeks</h3>
-        </header>
-        <div class="construction">
-            <h2>This website is under construction</h2>
+        <div class="main">
+            <header>
+                <a href="">Hem</a>
+                <a href="./CV.html">Om mig (CV)</a>
+            </header>
         </div>
     </body>
 </html>
