updates ppl updates

--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Hem - Alvin Nyström</title>
-        <link rel="icon" type="image/x-icon" href="./assets/images/hogtalare.png">
+        <link rel="icon" type="image/x-icon" href="./assets/images/IMG_8140.png">
         <link rel="stylesheet" href="assets/css/style.css">
     </head>
     <body>
-        <div class="main">
-            <header>
-                <a href="">Hem</a>
-                <a href="./CV.html">Om mig (CV)</a>
-            </header>
+        <div class="buttons">
+            <a href="https://lenspeeks.github.io/tikueff/">TIKUEFF</a>
+            <a href="https://lenspeeks.github.io/techder/">Bortom Ord.</a>
         </div>
     </body>
 </html>
