fräschar upp lite :)

--- a/index.html
+++ b/index.html
@@ -9,19 +9,22 @@
     </head>
     <body>
         <header>
-            <p><a href=".">MUSIKER</a> / <a href=".">KOMPOSITÖR</a> / <a href=".">FOTOGRAFI</a> / <a href=".">WEBBDESIGN</a></p>
+            <p>MUSIKER</p>
             <h1>ALVIN NYSTRÖM</h1>
         </header>
 
         <div class="about">
             <h2>Om mig</h2>
-            <p>Meet Ruben, an 18-year-old composer from Costa Rica with over a decade of experience in his craft.</p>
+            <p>Mitt namn är Alvin och jag är en 18 årig musiker från Sundsvall.</p>
+            <p>Jag är i huvudsak sångare och pianist men är också kompetent som bland annat basist.</p>
+
+            <!-- <p>Meet Ruben, an 18-year-old composer from Costa Rica with over a decade of experience in his craft.</p>
             <p>His journey kicked off with a deep love for storytelling sparked by cinematic masterpieces like Blade Runner, How to Train Your Dragon, and Spy Game. These films weren't just entertainment; they became his muse, guiding him into the enchanting realm of film music.</p>
-            <p>Fast forward a decade, and he proudly embraces his passion as a full-time profession. His musical signature is a seamless blend of classical orchestral elements and cutting-edge electronic synths. Specializing in crafting cinematic, intimately epic compositions, he remains ever-open to exploring new musical frontiers. His artistic journey is a testament to the power of passion and the evolution of a unique musical voice.</p>
+            <p>Fast forward a decade, and he proudly embraces his passion as a full-time profession. His musical signature is a seamless blend of classical orchestral elements and cutting-edge electronic synths. Specializing in crafting cinematic, intimately epic compositions, he remains ever-open to exploring new musical frontiers. His artistic journey is a testament to the power of passion and the evolution of a unique musical voice.</p> -->
         </div>
 
         <div class="contact">
-            <h2>kontakt</h2>
+            <h2>Kontakt</h2>
             <a href="mailto:alvin.nystrom1@gmail.com" target="_blank">alvin.nystrom1@gmail.com</a>
         </div>
 
